# tfrecords-reader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  develop.yml  release.yml
src/tfr_reader/: __init__.py  experimental.py  index.py  indexer.py  logging.py  reader.py
src/tfr_reader/cython/: decoder.pxd  decoder.pyi  decoder.pyx  image.pxd  image.pyi  image.pyx  index.pyx  indexer.pxd  indexer.pyi  indexer.pyx
src/tfr_reader/datasets/: __init__.py
src/tfr_reader/datasets/image_classification/: __init__.py  dataset.pxd  dataset.py  dataset.pyi  dataset.pyx  multi_file_reader.pxd  multi_file_reader.py  multi_file_reader.pyi  multi_file_reader.pyx  prefetch.py  processor.pxd  processor.py  processor.pyi  processor.pyx  sampler.pxd  sampler.py  sampler.pyi  sampler.pyx  tfrecord_processor.py  tfrecord_processor.pyi  tfrecord_processor.pyx
src/tfr_reader/example/: __init__.py  example_pb2.py  feature.py  tfr_example.proto
src/tfr_reader/filesystem/: __init__.py  base.py  gcs.py  local.py
tests/: test_dataset.py  test_index_caching.py  test_indexer.py  test_main.py  test_multi_file_reader.py  test_processor.py  test_reader.py  test_sampler.py  utils.py
